RESOLVED FIXED309026
PreconnectTask should cancel its NetworkLoad on timeout.
https://bugs.webkit.org/show_bug.cgi?id=309026
Summary PreconnectTask should cancel its NetworkLoad on timeout.
Basuke Suzuki
Reported 2026-03-02 17:32:06 PST
When PreconnectTask times out, it fires the completion handler and destroys itself, but does not cancel the underlying NetworkLoad. This leaves the NetworkLoad running, which can result in wasted TLS handshakes and misleading SSL error logs (e.g., trust evaluation failure / -1202) after the preconnect has already timed out.
Attachments
Basuke Suzuki
Comment 1 2026-03-02 17:36:12 PST
Basuke Suzuki
Comment 2 2026-03-02 17:36:45 PST
EWS
Comment 3 2026-03-03 11:30:30 PST
Committed 308565@main (d3fa2f1daaba): <https://commits.webkit.org/308565@main> Reviewed commits have been landed. Closing PR #59760 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.