Source/WebKit/NetworkProcess/PreconnectTask.cpp
@@ -115,6 +115,7 @@ void PreconnectTask::didFailLoading(const ResourceError& error)
 void PreconnectTask::didTimeout()
 {
     RELEASE_LOG_ERROR(Network, "%p - PreconnectTask::didTimeout", this);
+    m_networkLoad->cancel();
     m_completionHandler(ResourceError { String(), 0, m_networkLoad->parameters().request.url(), "Preconnection timed out"_s, ResourceError::Type::Timeout }, { }); // Deletes this.
 }
 
